<resources>
    <string name="app_name" translatable="false">ShiftCal Creator</string>
    <string name="app_version" translatable="false">v1.1.1</string>
    <string name="com_name" translatable="false">Sam Nicknam</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="errorToBeforeFrom">The end date cannot be before the begin date.</string>
    <string name="restart">Restart</string>
    <string name="restartMessage">Do you really want to restart?</string>
    <string name="shifts">Shifts</string>
    <string name="addToCal">Add To Calendar</string>
    <string name="addShift">Add Shift</string>
    <string name="exit">Exit</string>
    <string name="exitMessage">Do your really want to exit?</string>
    <string name="dayOff">Day Off</string>
    <string name="repetition">Repetition</string>
    <string name="repUp">Repetition up</string>
    <string name="repDown">Repetition down</string>
    <string name="add">Add</string>
    <string name="errorNoShiftName">Please enter a shift name.</string>
    <string name="save">Save</string>
    <string name="eventName">Event Name</string>
    <string name="errorNoCalName">Please enter a calendar name.</string>
    <string name="errorMoreShifts">A minimum of 1 shift is required.</string>
    <string name="error">An error has occurred.</string>
    <string name="addDayOff">Add Day Off</string>
    <string name="admob_id" translatable="false">ca-app-pub-2114038879047980~3399368758</string>
    <string name="interstitial_ad_id" translatable="false">ca-app-pub-2114038879047980/6352835151</string>
    <string name="noCalSupport">No app found supporting iCal import.</string>
    <string name="tut1_from">Set the first day of the schedule.</string>
    <string name="tut1_to">Set the last day of the schedule.</string>
    <string name="tut1_addShift">Add a new shift to the cycle.</string>
    <string name="tut_btn_done"><b>GOT IT</b></string>
    <string name="tut2_op">Drag &amp; drop to move a shift.\nSwipe a shift to the right to delete it.</string>
    <string name="info">Information</string>
    <string name="ic_website" translatable="false">https://icons8.com/icon/10053/Calendar-Filled</string>
    <string name="ic_website_name" translatable="false">Icons8</string>
    <string name="showTutorial">Show tutorial</string>
    <string name="version">Version</string>
    <string name="icBy">App icon by</string>
    <string name="description">Enter one cycle of your shift schedule and ShiftCal Creator does the rest.</string>
    <string name="about">About</string>
    <string name="github_id" translatable="false">NickSamNam</string>
    <string name="checkoutGithub">Check me out on GitHub</string>
    <string name="leaveRating">Leave a rating</string>
</resources>
