<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbarSchedule_et_name"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="center_vertical"
            android:inputType="none"
            android:longClickable="false"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp" />

        <ImageButton
            android:id="@+id/toolbarSchedule_btn_restart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/restart"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_undo"
            tools:ignore="RtlHardcoded"
            app:layout_constraintRight_toLeftOf="@+id/toolbarSchedule_btn_info"
            android:layout_marginRight="24dp" />

        <ImageButton
            android:id="@+id/toolbarSchedule_btn_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info"
            android:scaleType="fitCenter"
            android:tint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info"
            tools:ignore="RtlHardcoded"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.Toolbar>